NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

= V1.5.3 - soon =
* Bugfix : Fixed brackets position for old shortcode query 
* Bugfix : Slideshow option 'Show next image on click" has wrong default value 

= V1.5.2 - 25.03.2010 =
* Bugfix : XSS security vulnerability (THX to Core Security Advisories Team , Pedro Varangot) 
* Bugfix : Missing $wpdb in shortcodes.php

= V1.5.1 - 23.03.2010 =
* Bugfix : PHP4 compat issue for Add gallery & options page
* Bugfix : Gallery widget can now have a empty title
* Bugfix : Adding correct stripslash for gallery title

= V1.5.0 - 18.03.2010 =
* NEW : Support for Post thumbnail feature
* NEW : Backup and Recover function for images (THX to Simone Fumagalli)
* NEW : Resize images after upload (THX to Simone Fumagalli)
* NEW : Added a JSON class for fetching galleries in a RESTful way (see xml/json.php)
* NEW : Adding various new capabilities for user roles
* NEW : Auto downloader for translation file
* Changed : Rename query var from slideshow to callback for compat reason with other plugin
* Changed : Convert widget function to new WP structure
* Changed : Include lookup for tags into the backend search 
* Changed : Restructure addgallery and settings page to enable custom tabs
* Bugfix : Select album preview from gallery preview pics instead random list
* Bugfix : Keep fix dimension in edit thumbnail operation
* Bugfix : Import meta data didn't work correct for existing images
* Bugfix : Fix onload bug for Chrome 4 in Shutter script
* Bugfix : Remove various PHP notices for a better world
* Removed : Canonical link is now part of Wordpress 2.9

= V1.4.3 - 16.11.2009 =
* Bugfix : Urlencode XML file path for sildeshow

= V1.4.2 - 16.11.2009 =
* Changed : Load sildeshow XML not longer via relative path
* Bugfix : No imagebrowser in carousel mode
* Bugfix : JS Effect navigation based on wrong array structure
* Bugfix : Remove whitespaces from meta import
* Bugfix : Capability check for upgrade notice