@@ -2,6 +2,8 @@ NextGEN Gallery
 by Alex Rabe & NextGEN DEV Team
 
 = V1.5.3 - soon =
+* New : Adding pagination to footer
+* Bugfix : Pagination of galleries
 * Bugfix : Fixed brackets position for old shortcode query 
 * Bugfix : Slideshow option 'Show next image on click" has wrong default value 
 
